fix deprecations and dropping support for 2026.1 (only support for 2026.2+)